--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,20 @@ layout: default
 {% assign author = site.authors[page.author] %}
 <div class="container">
 <div class="jumbotron jumbotron-fluid mb-3 pl-0 pt-0 pb-0 bg-white position-relative">
-		<div class="h-100 tofront">
-			<div class="row {% if page.image %} justify-content-between {% else %} justify-content-center {% endif %}">
-				<div class="{% if page.image %} col-md-6 {% else %} col-md-8 {% endif %} pr-0 pr-md-4 pt-4 pb-4 align-self-center">
-					<p class="text-uppercase font-weight-bold">
+        <div class="h-100 tofront">
+            <!-- <div class="row {% if page.image %} justify-content-between {% else %} justify-content-center {% endif %}"> -->
+                <div class="row {% if page.image %} justify-content-center {% else %} justify-content-center {% endif %}">
+                <!-- <div class="{% if page.image %} col-md-6 {% else %} col-md-8 {% endif %} pr-0 pr-md-4 pt-4 pb-4 align-self-center"> -->
+                <div class="{% if page.image %} col-md-8 {% else %} col-md-8 {% endif %} pr-0 pr-md-4 pt-4 pb-4 align-self-center">
+                    <p class="text-uppercase font-weight-bold">
                         <span class="catlist">
-						{% for category in page.categories %}
+                        {% for category in page.categories %}
                           <a class="sscroll text-danger" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category | downcase }}</a><span class="sep">, </span>
                         {% endfor %}
                         </span>
-					</p>
-					<h1 class="display-4 mb-4 article-headline">{{ page.title }}</h1>
-					<div class="d-flex align-items-center">
+                    </p>
+                    <h1 class="display-4 mb-4 article-headline">{{ page.title }}</h1>
+                    <div class="d-flex align-items-center">
                         {% if author.avatar %}
                         <img class="rounded-circle" src="{{site.baseurl}}/{{author.avatar}}" alt="{{author.name}}" width="70"/>
                         {% endif %}
@@ -24,11 +26,11 @@ layout: default
 						</small>
 					</div>
 				</div>
-                {% if page.image %}
-				<div class="col-md-6 pr-0 align-self-center">
-					<img class="rounded" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
-				</div>
-                {% endif %}
+                <!-- {% if page.image %}
+                <div class="col-md-6 pr-0 align-self-center">
+                    <img class="rounded" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+                </div>
+                {% endif %} -->
 			</div>
 		</div>
 	</div>
