--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
             <!-- <div class="row {% if page.image %} justify-content-between {% else %} justify-content-center {% endif %}"> -->
             <div class="row {% if page.image %} justify-content-center {% else %} justify-content-center {% endif %}">
                 <!-- <div class="{% if page.image %} col-md-6 {% else %} col-md-8 {% endif %} pr-0 pr-md-4 pt-4 pb-4 align-self-center"> -->
-                <div class="{% if page.image %} col-md-8 {% else %} col-md-8 {% endif %} pr-0 pr-md-4 pt-4 pb-4 align-self-center">
+                <div class="col-md-8 pr-0 pr-md-4 pt-4 pb-4 align-self-center">
                     <p class="text-uppercase font-weight-bold">
                     <span class="catlist">
                     {% for category in page.categories %}
