Improve comment layout and bio

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -124,6 +124,12 @@ layout: default
             {% endcomment %} -->
 
             {% if page.comments != false %}
+                <div class="row mt-5">
+                    <div class="col-md-10">
+                        <h5 class="font-weight-bold">Comments</h5>
+                    <div>
+                <div>
+
                 <div id="comments" class="mt-5">
                 {%- if page.id -%}
                 <!--Every article has a id, but special pages don't unless you set manually.
