--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -41,3 +41,6 @@
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/privacy-policy.html">Privacy</a>
 </li>
+
+<!-- Lang Switcher -->
+{% include custom/lang-switcher.html %}
