--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,17 @@
 ---
-layout: default
+layout: page
+pagination: 
+  enabled: true
 ---
 
 <div class="container">
-<h3 class="font-weight-bold spanborder"><span>{{page.title}}</span></h3>
-<div class="page-content">
-{{ content }}
-<!-- Comments -->
-{% if page.comments == true %}
-{% include comments.html %}
-{% endif %}
-</div>
+    <h3 class="font-weight-bold spanborder"><span>{{page.title}}</span></h3>
+    <div class="page-content">
+        {{ content }}
+
+        <!-- Comments -->
+        {% if page.comments == true %}
+            {% include comments.html %}
+        {% endif %}
+    </div>
 </div>
