Localization works properly for header posts and archive
Basically it seems that paginate-v2 and polyglot cannot work together.
The solution is to disable polyglot and use paginate-v2 to handle the
localization of the archive posts.
Instead, the posts displayed at the top of the page must be handled by using two
different index.html files, where the main file contains all all the necessary
code, while the index_it.html is only used to manage the localization.
For some reason (bug?), this latter file must contain at least one liquid command
to work properly, which is not used.

--- a/_includes/custom/lang-switcher.html
+++ b/_includes/custom/lang-switcher.html
@@ -9,6 +9,8 @@
     </a>
 </li> -->
 
+
+<!-- remove this block ---
 {% comment %}
 {% for lang in site.languages %}
     {% if lang == site.active_lang %}
@@ -26,20 +28,23 @@
     {% endif %}
 {% endfor %}
 {% endcomment %}
+--- end remove this block -->
 
 
-{% for lang in site.languages %}
-    {% if lang == site.default_lang %}
+{% for lang in site.locales %}
+    {% if lang == site.default_locale %}
         <li class="nav-item">
-        <a class="nav-link" href=" {{ page.url }}">
+        <a class="nav-link" href="/">{{ lang }}
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/{{lang}}.png" width="24px" /> 
         </a>
         </li>
     {% else %}
         <li class="nav-item">
-        <a class="nav-link" href="/{{ lang }}{{ page.url }}">
+        <a class="nav-link" href="/{{ site.baseurl }}{{ lang }}">{{ lang }}
             <img class="img-fluid" src="{{site.baseurl}}/assets/images/{{lang}}.png" width="24px" />
         </a>
         </li>
     {% endif %}
 {% endfor %}
+
+
