--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -1,7 +1,14 @@
+{% if page.pagination.locale == "en" %}
+    {% assign site_tags_featured = site.tags.featured | where: "locale", "en"  %}
+{% else %}
+    {% assign site_tags_featured = site.tags.featured | where: "locale", "it" %}
+{% endif %}
+
+
 <div class="sticky-top sticky-top-offset">
-    <h4 class="font-weight-bold spanborder"><span>Featured</span></h4>  
-    <ol class="list-featured">				
-        {% for post in site.tags.featured %}                
+    <h4 class="font-weight-bold spanborder"><span>{{strings.featured}}</span></h4>
+    <ol class="list-featured">
+        {% for post in site_tags_featured %}
             <li class="mb-4">
             <span>
                 <h6 class="font-weight-bold">
@@ -15,7 +22,7 @@
                     </span>
                 </span>
             </span>
-            </li>                
-        {% endfor %}   
+            </li>
+        {% endfor %}
     </ol>
 </div> 
