--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
+locale: en
 ---
+
+{% assign ppl = page.locale %}
+{% assign strings = site.data.translations.strings[ppl] %}
+
+
 {% assign author = site.authors[page.author] %}
 <div class="container">
     <div class="jumbotron jumbotron-fluid mb-3 pl-0 pt-0 pb-0 bg-white position-relative">
@@ -23,7 +29,7 @@ layout: default
                             <img class="rounded-circle" src="{{site.baseurl}}/{{author.avatar}}" alt="{{author.name}}" width="70"/>
                         {% endif %}
                         <small class="ml-3"> {{ author.name }} 
-                            <span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">Follow</a></span>
+                            <span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">{{ strings.follow }}</a></span>
                             <span class="text-muted d-block mt-1">{{ page.date | date: '%b %d, %Y' }} · {% include meta-read-time.html %}</span>
                         </small>
                     </div>
@@ -47,14 +53,19 @@ layout: default
         <div class="col-lg-2 pr-4 mb-4 col-md-12">
             <div class="sticky-top sticky-top-offset text-center">
                 <div class="text-muted">
-                    Share this
+                    {{ strings.share_this }}
                 </div>
                 <div class="share d-inline-block">
                     <!-- AddToAny BEGIN -->
                     <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-                        <a class="a2a_button_facebook"></a>
                         <a class="a2a_button_twitter"></a>
+                        <a class="a2a_button_mastodon"></a>
+                        <a class="a2a_button_facebook"></a>
+                        <a class="a2a_button_linkedin"></a>
+                        <a class="a2a_button_wordpress"></a>
+                        <a class="a2a_button_tumblr"></a>
+                        <a class="a2a_button_pocket"></a>
+                        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
                     </div>
                     <script async src="https://static.addtoany.com/menu/page.js"></script>
                     <!-- AddToAny END -->
@@ -110,7 +121,7 @@ layout: default
                         {% endif %} 
                     </div>
                     <div class="col-md-10">		
-                        <h5 class="font-weight-bold">Written by {{ author.name }} {% if author.twitter %}<span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-2">Follow</a></span>{% endif %}</h5>
+                        <h5 class="font-weight-bold">{{ strings.written_by }} {{ author.name }} {% if author.twitter %}<span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-2">{{ strings.follow }}</a></span>{% endif %}</h5>
                         {{ author.bio }}
                     </div>
                 </div>				
@@ -126,7 +137,7 @@ layout: default
             {% if page.comments != false %}
                 <div class="row mt-5">
                     <div class="col-md-10">
-                        <h5 class="font-weight-bold">Comments</h5>
+                        <h5 class="font-weight-bold">{{ strings.comments }}</h5>
                     <div>
                 <div>
 
