--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ locale: en
 
 {% assign ppl = page.locale %}
 {% assign strings = site.data.translations.strings[ppl] %}
+{% assign dates = site.data.translations.dates[ppl] %}
 
 
 {% assign author = site.authors[page.author] %}
@@ -30,7 +31,7 @@ locale: en
                         {% endif %}
                         <small class="ml-3"> {{ author.name }} 
                             <span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">{{ strings.follow }}</a></span>
-                            <span class="text-muted d-block mt-1">{{ page.date | date: '%b %d, %Y' }} · {% include meta-read-time.html %}</span>
+                            <span class="text-muted d-block mt-1">{{ page.date | date: dates.date_format }} · {% include meta-read-time.html %}</span>
                         </small>
                     </div>
                 </div>
