--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 locale: en
 ---
 
-{% assign ppl = page.locale %}
-{% assign strings = site.data.translations.strings[ppl] %}
-{% assign dates = site.data.translations.dates[ppl] %}
+{% assign pl = page.locale %}
+{% assign strings = site.data.translations.strings[pl] %}
+{% assign dates = site.data.translations.dates[pl] %}
 
 
 {% assign author = site.authors[page.author] %}
