--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -1,3 +1,7 @@
+<!-- FIX ME -->
+<!-- as in menu-header.html where the loc variable is passed 
+     from default.html through the include statement -->
+
 {% if page.pagination.locale == "en" %}
     {% assign site_tags_featured = site.tags.featured | where: "locale", "en"  %}
 {% else %}
