--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -31,7 +31,7 @@
 </li>
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/categories.html">{{ strings.categories }}</a>
+<a class="nav-link" href="{{site.baseurl}}/{% if loc != site.default_locale %}{{ loc}}/{% endif %}categories.html">{{ strings.categories }}</a>
 </li>
 
 <li class="nav-item">
