Fixed: passing of loc variable to sidebar-featured.html

--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -1,12 +1,16 @@
-<!-- FIX ME -->
-<!-- as in menu-header.html where the loc variable is passed 
-     from default.html through the include statement -->
-
+<!-- REMOVE ME -->
+{% comment %}
 {% if page.pagination.locale == "en" %}
     {% assign site_tags_featured = site.tags.featured | where: "locale", "en"  %}
 {% else %}
     {% assign site_tags_featured = site.tags.featured | where: "locale", "it" %}
 {% endif %}
+{% endcomment %}
+<!-- END REMOVE ME -->
+
+ 
+<!-- the loc variable is passed from default.html or categories.html through the include statement  -->
+{% assign site_tags_featured = site.tags.featured | where: "locale", loc  %}
 
 
 <div class="sticky-top sticky-top-offset">
