Localize tags and add new menu item

--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -35,6 +35,10 @@
 </li>
 
 <li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/{% if loc != site.default_locale %}{{ loc}}/{% endif %}tags.html">{{ strings.tags }}</a>
+</li>
+
+<li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/{% if loc != site.default_locale %}{{ loc}}/{% endif %}authors-list.html">{{ strings.authors }}</a>
 </li>
 
