Use truncatewords instead of truncate also in main card

--- a/_includes/main-loop-card.html
+++ b/_includes/main-loop-card.html
@@ -12,7 +12,7 @@
             regex_replace: "\(http.*?\)", "" | 
             regex_replace: "[\[\]]", "" | 
             strip_newlines | 
-            truncate: 128}}
+            truncatewords: 24}}
         </p>
         <small class="d-block text-muted">
             In <span class="catlist">
