--- a/_includes/comma.html
+++ b/_includes/comma.html
@@ -20,49 +20,37 @@
     <button id="new-comment-submit" class="btn-ready" type="submit" value="Send">{{ strings.send_btn }}</button>
 </form> -->
 
-
 <form id="new-comment-form" action="{{ site.commentserver }}">
     <input type="hidden" name="post" value="{{ page.name }}">
-
     <div class="form-group">
-        <label for="comment-name">Name</label>
+        <!-- <label for="comment-name">Name</label> -->
         <input id="comment-name" type="text" name="name" class="form-control" placeholder="{{ strings.comment_name }}" required />
     </div>
-
     <div class="form-group">
-        <label for="comment-email">Email address</label>
+        <!-- <label for="comment-email">Email address</label> -->
         <input id="comment-email" type="email" name="email" class="form-control" aria-describedby="email-note" placeholder="{{ strings.comment_email }}" />
-        <small id="email-note" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <small id="email-note" class="form-text text-muted">{{ strings.comment_email_note }}</small>
     </div>
-
     <div class="form-group">
-        <label for="comment-url">Website</label>
+        <!-- <label for="comment-url">Website</label> -->
         <input id="comment-url" type="url" name="url" class="form-control" placeholder="{{ strings.comment_web }}" />
     </div>
-
     <div class="form-group">
-        <label for="comment-area">Comment</label>
-        <textarea id="comment-area" name="message" class="form-control" rows="5" placeholder="{{ strings.comment_txt }}" required >
-        </textarea>
+        <!-- <label for="comment-area">Comment</label> -->
+        <textarea id="comment-area" name="message" class="form-control" rows="5" placeholder="{{ strings.comment_txt }}" required ></textarea>
     </div>
-
     <!-- <div class="form-group">
         <label for="comment-check">Check me</label>
         <input id="comment-name" type="text" name="special" class="form-control" placeholder="{{ strings.comment_chk }}" required />
     </div> -->
-
+    <div class="form-group">
     <div class="form-check">
         <input id="comment-check" type="checkbox" name="special" class="form-check-input" required />
-        <label for="comment-check" class="form-check-label">Check me out</label>
+        <label for="comment-check" class="form-check-label">{{ strings.comment_chk_alt }}</label>
     </div>
-
+    </div>
     <button id="new-comment-submit" type="submit" class="btn btn-primary" value="Send">{{ strings.send_btn }}</button>
 </form>
-
-
-
-
-
 
 
 <template id="comment-template">
